--- a/styles.css
+++ b/styles.css
@@ -1,10 +1,8 @@
-@import url('https://fonts.googleapis.com/css2?family=Bebas+Neue&display=swap');
-
 html,
 body {
     width: 100%;
     height: 100%;
-    font-family: 'Bebas Neue', 'Times New Roman';
+    font-family: 'Lato', 'Times New Roman';
     background-image: linear-gradient(to bottom right, blue, indigo, violet);
 }
 
