--- a/styles.css
+++ b/styles.css
@@ -28,7 +28,7 @@ body {
 
 .button {
     position: absolute;
-    width: 150px;
+    width: 180px;
     height: 40px;
     text-align: center;
     background: white;
@@ -38,4 +38,7 @@ body {
     margin-left: -75px;
     margin-top: 40%;
     border-radius: 999px;
+}
+.button:hover{
+    cursor: pointer;
 }
